--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -4,7 +4,7 @@
       <h2 class="register__title">CREA TU CUENTA</h2>
       <p class="register__subtitle">Completa el formulario para ser parte del mundo de los Funkos</p>
   </div>
-  <form class="register__form" action="/register" method="POST" enctype="application/x-www-form-urlencoded">
+  <form class="register__form" action="register" method="POST" enctype="application/x-www-form-urlencoded">
       <div class="form__box--grid">
           <label class="form__label" for="name">Nombre:</label>
           <input class="form__input" type="text" name="name" id="name" placeholder="nombre" required>
@@ -23,7 +23,7 @@
       </div>
       <div class="form__box--grid">
           <label class="form__label" for="repassword">Repite Contraseña:</label>
-          <input class="form__input" type="repassword" name="repassword" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" required>
+          <input class="form__input" type="password" name="repassword" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" required>
       </div>
       <div class="form__submission">
           <input class="form__btn btn btn--primary btn--large" type="submit" value="Registrar">
