--- a/src/views/components/slider.ejs
+++ b/src/views/components/slider.ejs
@@ -1,5 +1,5 @@
-<section class="slider container glide">
-  <h2 class="slider__title">Últimos Lanzamientos</h2>
+<section class='slider contenedor-slider glide'>
+  <h2 class="slider__title"><%=view.slider_titulo %></h2>
   <div class="glide__track" data-glide-el="track">
       <ul class="slider__items glide__slides">
         <% collections.forEach( collection => { %>
@@ -29,3 +29,24 @@
       <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon icon="tabler:chevron-right"></iconify-icon></button>
   </div>
 </section>
+
+<script src='https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/@glidejs/glide'></script>
+<script>
+    new Glide('.glide',
+        {
+            type: 'carousel',
+            startAt: 0,
+            perView: 3,
+            gap: 30,
+            breakpoints: {
+                991: {
+                    perView: 2
+                    },
+                768: {
+                    perView: 1
+                }
+            }
+        }
+    ).mount();
+</script>
