--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -20,7 +20,7 @@
   </nav>
   <p class="footer__copy">All rights reserved 2023 - Funkoshop &copy;</p>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.7/dist/iconify-icon.min.js"></script>
 <% if (locals.enableGlide) { %>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script>
@@ -30,6 +30,7 @@
             startAt: 0,
             perView: 3,
             gap: 30,
+            autoplay: 2000,
             breakpoints: {
                 991: {
                     perView: 2
@@ -41,6 +42,6 @@
         }
     ).mount();
     </script>
-<% } %>
+<% } %> -->
 </body>
 </html>
